Restructuring the training scripts & changing names etc.

--- a/train2.0_dev.ipynb
+++ b/train2.0_dev.ipynb
@@ -33,7 +33,7 @@
     "sys.path.insert(1, '/STER/silkem/MACE/src/mace')\n",
     "\n",
     "import src.mace.CSE_0D.dataset          as ds\n",
-    "import src.mace.CSE_0D.intregr_train    as tr\n",
+    "import CSE_0D.integrated    as tr\n",
     "import src.mace.latentODE               as lODE\n",
     "import src.mace.mace                    as mace\n",
     "from src.mace.CSE_0D.loss               import Loss\n",
