Moving files to src

--- a/test_cleanup.ipynb
+++ b/test_cleanup.ipynb
@@ -10,16 +10,11 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib        as mpl\n",
     "import sys\n",
-    "import os\n",
-    "import json\n",
-    "import matplotlib.lines     as mlines\n",
-    "import tqdm\n",
-    "from scipy.stats    import gmean\n",
+    "\n",
     "import torch\n",
-    "from torch.autograd.functional import jacobian\n",
+    "\n",
     "from time import time\n",
-    "from natsort                import natsorted\n",
-    "from matplotlib.ticker import FixedLocator\n",
+    "\n",
     "\n",
     "\n",
     "from matplotlib          import rcParams, rc\n",
@@ -33,13 +28,10 @@
     "sys.path.insert(1, '/STER/silkem/MACE/src/mace')\n",
     "\n",
     "import src.mace.CSE_0D.dataset          as ds\n",
-    "import CSE_0D.train                as train\n",
-    "import CSE_0D.test                      as test\n",
-    "import src.mace.latentODE               as lODE\n",
+    "import train                as train\n",
+    "import test                      as test\n",
     "import src.mace.mace                    as mace\n",
-    "from src.mace.CSE_0D.loss               import Loss\n",
-    "import src.mace.CSE_0D.loss             as loss\n",
-    "import src.mace.CSE_0D.plotting         as pl\n",
+    "from loss               import Loss\n",
     "import src.mace.utils                   as utils\n",
     "# from src.mace.neuralODE    import Solver\n",
     "\n",
