Clean function to test trained mace model on 1D classical model + error function in utils

--- a/test_cleanup.ipynb
+++ b/test_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +500,52 @@
    ],
    "source": [
     "trained.plot_loss(save=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Testing step...\n",
+      "Solving time [s]: 0.006941795349121094\n",
+      "\n",
+      ">>> Testing evolution...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 133/133 [00:01<00:00, 123.58it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving time [s]: 1.067112684249878\n",
+      "Total   time [s]: 1.0832619667053223\n",
+      "\n",
+      ">>> Denormalising... \n",
+      "\n",
+      ">>> Errors:\n",
+      "     Step      error: 4.719\n",
+      "     Evolution error: 6.968\n"
+     ]
+    }
+   ],
+   "source": [
+    "testpath = '/lhome/silkem/CHEM/Output_nov2022/20211015_gridC_Mdot1e-6_v17-5_T_eps/models/model_2022-12-24h17-06-51/csfrac_smooth.out'\n",
+    "specs = ['CO', 'H2O', 'OH', 'HCN', 'CN']\n",
+    "# specs = []\n",
+    "# print(len(specs))\n",
+    "\n",
+    "macetime = trained.test(testpath, specs, plotting=False)"
    ]
   },
   {
