test old functions for the autoencoder

--- a/test_cleanup.ipynb
+++ b/test_cleanup.ipynb
@@ -1614,6 +1614,59 @@
    "source": [
     "utils.get_specs()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "___________________________________\n",
+      "\n",
+      "Encoder\n",
+      "       # | nodes | parameters\n",
+      "-----------------------------------\n",
+      "   input |   472 |     124872\n",
+      "  hidden |   264 |      16960\n",
+      "  hidden |    64 |        520\n",
+      "  output |     8 |          /\n",
+      "-----------------------------------\n",
+      "         |       |     142352\n",
+      "\n",
+      "Decoder\n",
+      "       # | nodes | parameters\n",
+      "-----------------------------------\n",
+      "   input |     8 |        576\n",
+      "  hidden |    64 |      17160\n",
+      "  hidden |   264 |     124020\n",
+      "  output |   468 |          /\n",
+      "-----------------------------------\n",
+      "         |       |     141756\n",
+      "___________________________________\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import src.mace.autoencoder as ae\n",
+    "\n",
+    "input_ae_dim = 468+4\n",
+    "n_dim = 468\n",
+    "z_dim = 8\n",
+    "nb_hidden = 1\n",
+    "ae_type = 'simple'\n",
+    "\n",
+    "encoder = ae.Encoder(input_dim=input_ae_dim, latent_dim=z_dim, nb_hidden=nb_hidden, ae_type=ae_type)\n",
+    "decoder = ae.Decoder(latent_dim=z_dim      , output_dim=n_dim, nb_hidden=nb_hidden, ae_type=ae_type)\n",
+    "\n",
+    "coder = ae.Autoencoder(encoder, decoder)\n",
+    "\n",
+    "\n",
+    "ae.overview(coder)"
+   ]
   }
  ],
  "metadata": {
