Training routine finished

--- a/test_cleanup.ipynb
+++ b/test_cleanup.ipynb
@@ -526,7 +526,8 @@
     "outloc  = '/STER/silkem/MACE/models/CSE_0D/'\n",
     "dirname = '20240207_134859_66656_4'\n",
     "\n",
-    "trained = load.Trained_MACE(outloc=outloc, dirname=dirname)"
+    "trained = load.Trained_MACE(outloc=outloc, dirname=dirname)\n",
+    "model = trained.model"
    ]
   },
   {
