--- a/load_model.ipynb
+++ b/load_model.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load a trained MACE model\n",
+    "\n",
+    "In this notebook, the flow of loading a trained MACE model, step by step."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -46,11 +55,6 @@
     "%reload_ext autoreload\n",
     "%autoreload 2"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
