Changing theme docs

--- a/load_model.ipynb
+++ b/load_model.ipynb
@@ -150,6 +150,8 @@
    "source": [
     "testpath = '/STER/silkem/MACE/data/test/model_2022-12-24h17-06-51/csfrac_smooth.out'\n",
     "\n",
+    "testpath = ''\n",
+    "\n",
     "macetime = test.test_model(model,testpath, meta, plotting=True, save = True)"
    ]
   }
