--- a/paper.bib
+++ b/paper.bib
@@ -148,3 +148,39 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...652A..51M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Nordhaus2006,
+	author = {{Nordhaus}, J. and {Blackman}, E.~G.},
+	title = "{Low-mass binary-induced outflows from asymptotic giant branch stars}",
+	journal = {\mnras},
+	keywords = {stars: AGB and post-AGB: stars: low-mass, brown dwarfs: stars: magnetic fields: planetary nebulae: general, stars: AGB and post-AGB, stars: low-mass, brown dwarfs, stars: magnetic fields, planetary nebulae: general, Astrophysics},
+	year = 2006,
+	month = aug,
+	volume = {370},
+	number = {4},
+	pages = {2004-2012},
+	doi = {10.1111/j.1365-2966.2006.10625.x},
+	archivePrefix = {arXiv},
+	eprint = {astro-ph/0604445},
+	primaryClass = {astro-ph},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2006MNRAS.370.2004N},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Maes2024,
+       author = {{Maes}, S. and {De Ceuster}, F. and {Van de Sande}, M. and {Decin}, L.},
+        title = "{MACE: A Machine learning Approach to Chemistry Emulation}",
+      journal = {arXiv e-prints},
+     keywords = {Physics - Computational Physics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = may,
+          eid = {arXiv:2405.03274},
+        pages = {arXiv:2405.03274},
+          doi = {10.48550/arXiv.2405.03274},
+archivePrefix = {arXiv},
+       eprint = {2405.03274},
+ primaryClass = {physics.comp-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240503274M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
