--- a/paper.bib
+++ b/paper.bib
@@ -52,7 +52,7 @@ archivePrefix = {arXiv},
 }
 
 @INPROCEEDINGS{Maes2022,
-       author = {{Maes}, Silke and {Siess}, Lionel and {Homan}, Ward and {Malfait}, Jolien and {De Ceuster}, Frederik and {Ceulemans}, Thomas and {Donn{\'e}}, Dion and {Esseldeurs}, Mats and {Decin}, Leen},
+       author = {{Maes}, S. and {Siess}, Lionel and {Homan}, Ward and {Malfait}, Jolien and {De Ceuster}, Frederik and {Ceulemans}, Thomas and {Donn{\'e}}, Dion and {Esseldeurs}, Mats and {Decin}, Leen},
         title = "{Route towards complete 3D hydro-chemical simulations of companion-perturbed AGB outflows}",
      keywords = {Stars: AGB, Stars: winds, outflows, Methods: numerical, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
     booktitle = {The Origin of Outflows in Evolved Stars},
