Fixing paths to files in example pynbs

--- a/docs/src/example/run.ipynb
+++ b/docs/src/example/run.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,13 @@
     "from time                   import time\n",
     "import datetime             as dt\n",
     "from tqdm                   import tqdm\n",
+    "\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "\n",
+    "parentpath = str(Path().cwd())[:-16]\n",
+    "\n",
+    "sys.path.append(parentpath)\n",
     "\n",
     "import src.mace.CSE_0D.dataset  as ds\n",
     "import src.mace.train           as train\n",
@@ -63,7 +70,7 @@
     "now = dt.datetime.now()\n",
     "name = str(now.strftime(\"%Y%m%d\")+'_'+now.strftime(\"%H%M%S\"))\n",
     "\n",
-    "path = '/STER/silkem/MACE/models/CSE_0D/'+name"
+    "path = parentpath + 'models/'+name"
    ]
   },
   {
